<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AirCasting</string>
    <string name="invalid_credentials_message">Incorrect profile name or password.</string>
    <string name="login_header">Sign in</string>
    <string name="login_description">to record and map your environment</string>
    <string name="profile_name_hint">Profile name</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="create_account_prompt">First time here? </string>
    <string name="create_account_text_button">Create an account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_out_background">Currently logging out in the background. You can fill out credentials</string>
    <string name="create_account_header">Create account</string>
    <string name="create_account_description">to record and map your environment</string>
    <string name="create_account_button">Create account</string>
    <string name="email_hint">Email</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="login_text_button">Sign in</string>
    <string name="send_emails">Send me emails from AirCasting</string>
    <string name="create_account_errors_message">There are errors in the form. Please fix them before continuing.</string>
    <string name="profile_name_email_hint">Profile name or email</string>
    <string name="title_settings">Settings</string>
    <string name="dashboard_empty_header">Ready to get started?</string>
    <string name="dashboard_empty_text">Explore &amp; follow existing AirCasting sessions or use your own device to record a new session and monitor your health &amp; environment.</string>
    <string name="dashboard_tabs_following">Following</string>
    <string name="dashboard_tabs_mobile_active">Mobile active</string>
    <string name="dashboard_tabs_mobile_dormant">Mobile dormant</string>
    <string name="dashboard_tabs_fixed">Fixed</string>
    <string name="record_new_session">Record new session</string>
    <string name="disconnect_session">Enter standalone mode</string>
    <string name="reconnect_session">Reconnect session</string>
    <string name="stop_session">Finish recording session</string>
    <string name="delete_session">Delete session</string>
    <string name="threshold_alerts">Threshold alerts</string>
    <string name="threshold_alerts_bottom_sheet_subtitle">Get notified when measured value for a stream exceeds given threshold</string>
    <string name="threshold_alerts_threshold_value">Threshold</string>
    <string name="not_numeric_value_error">Value should be numeric!</string>
    <string name="daily_frequency">24 hours</string>
    <string name="hourly_frequency">1 hour</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="follow_button">follow</string>
    <string name="unfollow_button">unfollow</string>
    <string name="map_button">map</string>
    <string name="graph_button">graph</string>
    <string name="dashboard_empty_mobile_active_header">Start recording a mobile session</string>
    <string name="dashboard_empty_mobile_active_text">If you plan on moving around while recording measurements.</string>
    <string name="record_mobile_session">Record mobile session</string>
    <string name="disconnected_view_bluetooth_device_header">Measurement device\ndisconnected</string>
    <string name="disconnected_view_bluetooth_device_description">Your measurement device is no longer connected to the AirCasting app. Make sure Bluetooth is on and your measurement device is nearby.</string>
    <string name="disconnected_view_bluetooth_device_reconnect_button">Reconnect</string>
    <string name="disconnected_view_bluetooth_device_finish_button">Finish session</string>
    <string name="edit_session">Edit session</string>
    <string name="edit_session_data">Edit session data</string>
    <string name="tags_bottom_sheet_input">Tags:</string>
    <string name="session_name_bottom_sheet_input">Session name</string>
    <string name="edit_data">Edit data</string>
    <string name="share_title">View my AirCasting session</string>
    <string name="delete_session_data">Delete this session</string>
    <string name="delete_streams">Delete streams</string>
    <string name="delete_all_data_from_session">All from this session</string>
    <string name="delete_streams_subtitle">Which streams would you like to delete?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="disconnected_view_airbeamSyncable_header">Your AirBeam is now\nin stand-alone mode</string>
    <string name="disconnected_view_airbeamSyncable_description">AirBeam is now recording using its storage. The measurements will be displayed here after syncing.</string>
    <string name="disconnected_view_airbeamSyncable_sync_button">Finish recording &amp; sync</string>
    <string name="disconnected_view_airbeamSyncable_finish_button">Finish recording &amp; don\'t sync</string>
    <string name="turn_on_wifi_dialog_header">Turn on WIFI</string>
    <string name="turn_on_wifi_dialog_description">To see available networks list you need to turn on WIFI.</string>
    <string name="turn_on_wifi_dialog_ok_button">Turn on</string>
    <string name="title_lets_begin">Let\'s begin</string>
    <string name="record_new_session_title">Record a new session</string>
    <string name="select_session_type_header">How would you like to add your session?</string>
    <string name="new_session_more_info"><u>more info</u></string>
    <string name="fixed_session_start_title">Fixed session</string>
    <string name="fixed_session_start_desc">for measuring in one place</string>
    <string name="mobile_session_start_title">Mobile session</string>
    <string name="mobile_session_start_desc">for moving around</string>
    <string name="or">or</string>
    <string name="sync_title">Sync storage</string>
    <string name="sync_description">for AirBeam3 or AirBeam Mini</string>
    <string name="clear_card_title">Clear AirBeam data storage</string>
    <string name="clear_card_description">This is temporary button for the testing purposes</string>
    <string name="more_info_title">Session types</string>
    <string name="more_info_text_part1">If you plan on moving around with the AirBeam while recording air quality measurements, configure the AirBeam to record a</string>
    <string name="more_info_text_part2">mobile</string>
    <string name="more_info_text_part3">session. When recording a mobile AirCasting session, measurements are created, timestamped, and geolocated once per second. After recording for >2 hours, your measurements will be integrated into 5-second averages. After recording for >9 hours, your measurements will be integrated into 1-minute averages. \n\nIf you plan to leave the AirBeam indoors or hang it outside then configure it to record a</string>
    <string name="more_info_text_part4">fixed</string>
    <string name="more_info_text_part5">session. When recording fixed AirCasting sessions, measurements are created and timestamped once per minute and geocoordinates are fixed to a set location.</string>
    <string name="more_info_cancel_button_text">CLOSE</string>
    <string name="turn_on_location_services_image_desc">Turn on location services</string>
    <string name="turn_on_location_services_header">Turn on location services</string>
    <string name="turn_on_location_services_description">To map your measurements, turn on location services.</string>
    <string name="turn_on_location_services_ok_button">Turn on</string>
    <string name="locations_services_must_be_turned_on_part1">Location services must be turned on to enable Bluetooth scanning.</string>
    <string name="locations_services_must_be_turned_on_part2">You\'ll be prompted to turn off location services after you\'ve selected the Bluetooth device you\'ll be recording with.</string>
    <string name="turn_on_bluetooth_image_desc">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_header">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_description">Turn on Bluetooth to enable your phone to connect to the AirBeam.</string>
    <string name="turn_on_bluetooth_ok_button">Continue</string>
    <string name="power_on_bluetooth_device_header">Power on your AirBeam</string>
    <string name="power_on_bluetooth_device_desc">If using AirBeam2, wait for the connection indicator to change from red to green before continuing.</string>
    <string name="power_on_bluetooth_device_ready_button">Continue</string>
    <string name="power_on_bluetooth_device_image_desc">Power on your AirBeam</string>
    <string name="turn_on_airbeam_header">Power on your AirBeam</string>
    <string name="turn_on_airbeam_description">If using AirBeam2, wait for the connection indicator to change from red to green before continuing.</string>
    <string name="turn_on_airbeam_ready_button">Continue</string>
    <string name="turn_on_airbeam_image_desc">Power on your AirBeam</string>
    <string name="select_device_type_header">What device are you using to record this session?</string>
    <string name="bluetooth_device_card_header">Bluetooth device</string>
    <string name="bluetooth_device_card_body">for example AirBeam</string>
    <string name="microphone_device_card_header">Phone microphone</string>
    <string name="microphone_device_card_body">to measure sound level</string>
    <string name="mobile_session_details_header">New session details</string>
    <string name="session_details_session_name_hint">Session name</string>
    <string name="session_details_session_tags_hint">Tags</string>
    <string name="session_details_continue_button">Continue</string>
    <string name="fixed_session_details_indoor_toggle_header">Where will you place your AirBeam?</string>
    <string name="fixed_session_details_indoor">Indoor</string>
    <string name="fixed_session_details_outdoor">Outdoor</string>
    <string name="fixed_session_details_streaming_method_header">Data transmission:</string>
    <string name="fixed_session_details_cellular">Cellular</string>
    <string name="fixed_session_details_wifi">WiFi</string>
    <string name="settings_my_account">My account</string>
    <string name="settings_contribute_to_crowdmap">Contribute to crowd map</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="settings_contribute_to_crowdmap_description">Data contributed to the CrowdMap is publicly available at aircasting.org</string>
    <string name="settings_backend_settings">Backend settings</string>
    <string name="map_enable_description">Turns off GPS tracking &amp; session syncing. Use \'Share file\' to retrieve your measurements via email.</string>
    <string name="disable_mapping">Disable mapping</string>
    <string name="version">version</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="your_privacy">Your privacy</string>
    <string name="sync_unavailable_dialog_header">Storage sync unavailable</string>
    <string name="sync_unavailable_dialog_description">To use the AirBeam in standalone mode and sync the storage,\nAndroid 8 or higher + Bluetooth 5 are required</string>
    <string name="sync_unavailable_dialog_continue_button">Continue</string>
    <string name="microphone_settings_title">Phone Microphone Calibration</string>
    <string name="microphone_settings_description">Adjust via trial &amp; error until the measurements in the app match your reference sound level meter. For most phones it\'s between 80 and 100.</string>
    <string name="use_dark_theme">Use Dark theme</string>
    <string name="use_celsius_scale">Use Celsius scale</string>
</resources>