<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        style="@style/Widget.Aircasting.ExpandedCardButtons"
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_button"
        android:backgroundTint="@color/aircasting_blue_400"
        android:textColor="@color/aircasting_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Aircasting.ExpandedCardButtonUnfollow"
        android:id="@+id/unfollow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow_button"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.Aircasting.ExpandedCardButtons"
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        android:layout_marginEnd="@dimen/keyline_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/graph_button" />

    <Button
        style="@style/Widget.Aircasting.ExpandedCardButtons"
        android:id="@+id/graph_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
