<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/disconnected_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/keyline_3"
        app:layout_constraintTop_toBottomOf="@+id/measurements_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/aircasting_blue_50"
        android:padding="@dimen/keyline_8">

        <TextView
            android:id="@+id/disconnected_view_bluetooth_device_header"
            android:text="@string/disconnected_view_bluetooth_device_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Aircasting.Headline2"
            android:textSize="@dimen/text_size_s"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/disconnected_view_bluetooth_device_description"
            android:text="@string/disconnected_view_bluetooth_device_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Aircasting.Body2"
            android:textColor="@color/aircasting_grey_700"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/keyline_4"
            android:lineHeight="20dp"/>

        <Button
            android:id="@+id/disconnected_view_bluetooth_device_reconnect_button"
            android:text="@string/disconnected_view_bluetooth_device_reconnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_8" />

        <Button
            android:id="@+id/disconnected_view_bluetooth_device_finish_button"
            style="@style/Widget.Aircasting.TextButton"
            android:fontFamily="@font/moderat_trial_bold"
            android:textSize="@dimen/button_text_size"
            android:text="@string/disconnected_view_bluetooth_device_finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</merge>
