<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/turn_on_bluetooth_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="@dimen/header1_text_size"
        android:text="@string/turn_on_bluetooth_header"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/turn_bluetooth_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:text="@string/turn_on_bluetooth_description"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/turn_on_bluetooth_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/turn_on_bluetooth_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/turn_on_bluetooth_ok_button"
        app:layout_constraintTop_toBottomOf="@id/turn_bluetooth_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>