<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dashboard_mobile_active_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_empty_mobile_active_header"
        android:textAppearance="?attr/textAppearanceHeadline2"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dashboard_mobile_active_text"
/>

    <TextView
        android:id="@+id/dashboard_mobile_active_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_6"
        android:text="@string/dashboard_empty_mobile_active_text"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textAlignment="center"
        android:lineHeight="30dp"
        app:layout_constraintTop_toBottomOf="@id/dashboard_mobile_active_header"
        app:layout_constraintBottom_toTopOf="@id/dashboard_mobile_record_new_session_button"
/>

    <Button
        android:id="@+id/dashboard_mobile_record_new_session_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_8"
        android:text="@string/record_mobile_session"
        app:layout_constraintTop_toBottomOf="@id/dashboard_mobile_active_text"
        app:layout_constraintBottom_toBottomOf="parent"
/>

</androidx.constraintlayout.widget.ConstraintLayout>
