<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/session_details_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Aircasting.NewSessionDetails.Headline1"
            android:text="@string/mobile_session_details_header"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_details_session_name_hint"
            app:hintEnabled="false"
            style="@style/Widget.Aircasting.NewSessionDetails.TextInputLayout"
            android:layout_marginTop="@dimen/keyline_6"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            app:layout_constraintTop_toBottomOf="@id/session_details_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:hint="@string/session_details_session_name_hint"
                android:textAppearance="@style/TextAppearance.Aircasting.NewSessionDetails.Text"
                android:textColor="@color/aircasting_grey_700"
                />

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/Widget.Aircasting.NewSessionDetails.TextInputLayout"
            android:layout_marginTop="@dimen/keyline_6"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            app:layout_constraintTop_toBottomOf="@id/session_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_tags_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:hint="@string/session_details_session_tags_hint"
                android:textAppearance="@style/TextAppearance.Aircasting.NewSessionDetails.Text"
                android:textColor="@color/aircasting_grey_700"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/indoor_toggle_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Aircasting.NewSessionDetails.Headline2"
            android:text="@string/fixed_session_details_indoor_toggle_header"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            app:layout_constraintTop_toBottomOf="@+id/session_tags"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Switch
            android:id="@+id/indoor_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:splitTrack="true"
            android:thumb="@android:color/transparent"
            android:thumbTextPadding="10dp"
            android:textDirection="ltr"
            android:textOn="@string/fixed_session_details_indoor"
            android:textOff="@string/fixed_session_details_outdoor"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/indoor_toggle_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/streaming_method_toggle_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/fixed_session_details_streaming_method_header"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/indoor_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Switch
            android:id="@+id/streaming_method_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:splitTrack="true"
            android:thumb="@android:color/transparent"
            android:thumbTextPadding="10dp"
            android:textDirection="ltr"
            android:textOn="@string/fixed_session_details_cellular"
            android:textOff="@string/fixed_session_details_wifi"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/streaming_method_toggle_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wifi_credentials"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/streaming_method_toggle">

            <EditText
                android:id="@+id/wifi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fixed_session_details_wifi_name_hint"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="@id/wifi_credentials"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/wifi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/fixed_session_details_wifi_password_hint"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/wifi_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginBottom="@dimen/keyline_10"
            android:text="@string/session_details_continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
