<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Aircasting.NewSessionDetails.Headline1"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:text="@string/sync_unavailable_dialog_header"
        app:lineHeight="@dimen/keyline_6"
        android:layout_marginTop="@dimen/keyline_8"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"
        android:layout_marginBottom="@dimen/keyline_6" />

    <TextView
        android:id="@+id/sync_unavailable_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Aircasting.Cards.Body1"
        android:text="@string/sync_unavailable_dialog_description"
        android:textSize="@dimen/text_size_s"
        android:textAlignment="center"
        android:lineHeight="@dimen/keyline_4"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"  />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_unavailable_dialog_continue_button"
        android:layout_marginTop="@dimen/keyline_6"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"
        android:layout_marginBottom="@dimen/keyline_6" />
</androidx.appcompat.widget.LinearLayoutCompat>
